--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <nav>
+        <a href="/history">History</a> |
         <a href="/dashboard">Dashboard</a> |
         <a href="/log_workout">Log Workout</a> |
         <a href="/logout">Logout</a>
