--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <a href="/history">History</a> |
         <a href="/dashboard">Dashboard</a> |
         <a href="/log_workout">Log Workout</a> |
+        <a href="/analytics">Analytics</a>
         <a href="/logout">Logout</a>
     </nav>
     <hr>
