--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,24 @@
 <head>
     <title>Workout Tracker</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
+  {% if request.path not in ['/login', '/register'] %}
     <nav>
         <a href="/history">History</a> |
         <a href="/dashboard">Dashboard</a> |
         <a href="/log_workout">Log Workout</a> |
-        <a href="/analytics">Analytics</a>
+        <a href="analytics.html">Analytics</a> |
         <a href="/logout">Logout</a>
     </nav>
+  {% endif %}
     <hr>
     
     <div>
@@ -29,5 +37,8 @@
         {% block content %}
         {% endblock %}
     </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
