--- a/templates/base.html
+++ b/templates/base.html
@@ -36,12 +36,12 @@
             </li>
             <li class="nav-item"></li>
               <a class="nav-link text-white" href="/log_workout">
-                <i class="fas fa-dumbbell" style="color: var(--primary);"></i> Log Workout
+                <i class="fas fa-dumbbell" style="color: var(--primary);"></i> Log Workouts
               </a>
             </li>
             <li class="nav-item"></li>
               <a class="nav-link text-white" href="/analytics">
-                <i class="bi bi-graph-up-arrow me-1" style="color: var(--primary);"></i> Analytics
+                <i class="bi bi-graph-up-arrow me-1" style="color: var(--primary);"></i> Progress
               </a>
             </li>
             <li class="nav-item"></li>
